# crewai-todo-app

./: .env.example  .gitignore  .vercelignore  CONTEXT_SUMMARY.md  CREWAI sunum.html  CREWAI sunum.md  CREWAI sunum.pptx  DEMO_ADIMLAR.md  PHASE1_DRONE_CHECKLIST_PLAN.md  README.md  drone_checklist_app.py  pyproject.toml  requirements.txt  todo_app.py
api/: index.py
article/: Final-Report.tex  UAV_MAS_Conference_Paper.tex
crewai_todo_app/: __init__.py
docs/paper/: UAV_MAS_Conference_Paper.tex
docs/superpowers/plans/: 2026-06-04-mission-supervisor-runtime.md
docs/superpowers/specs/: 2026-06-04-mission-supervisor-design.md
mission_runtime/: checklist_rules.py  log_reader.py  models.py  reporting.py  runtime_agents.yaml  runtime_crewai.py  runtime_tasks.yaml  sample_log_generator.py  store.py  supervisor.py
scripts/: drone_checklist_app_ges.py  generate_article_diagrams.py
scripts/patches/: apply_fixes.py  combine_panels.py  fix_checkbox_ui.py  fix_checklist_insert.py  fix_history_path.py  fix_history_ui.py  fix_js_bugs.py  fix_litellm_openrouter.py  restore_features.py  rewrite_ui.py
scripts/tools/: build_marp_pdf.sh  generate_assets.py  test_api.py
src/crewai_todo_app/: __init__.py  crew.py  main.py
sunum/: CREWAI sunum canva paste.txt  CREWAI sunum konusmaci notlari.md  CREWAI sunum.html  CREWAI sunum.md  KONUSMACI_3_NOTLARI.md
sunum/mas-talk/: metropolis-ege.css  sunum.md
tests/: test_app.py  test_crewai_package.py  test_log_reader.py  test_reporting.py  test_runtime_crewai.py  test_sample_log_generator.py  test_store.py  test_supervisor.py
(+3 files in other folders)
